old_py/grammar/HazeParser.py
# Generated from Haze.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class HazeParser ( Parser ):

    grammarFileName = "Haze.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "':'", "'=>'", "'{'", "'}'", 
                     "','", "'.'", "';'", "'extern'", "'\"C\"'", "'\"C++\"'", 
                     "'__c__'", "'return'", "'='", "'let'", "'const'", "'if'", 
                     "'else'", "'*'", "'/'", "'%'", "'+'", "'-'", "'<'", 
                     "'>'", "'<='", "'>='", "'=='", "'!='", "'is'", "'not'", 
                     "'and'", "'or'", "'true'", "'false'", "'#compile'", 
                     "'#link'", "'struct'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "STRING_LITERAL", "ID", "INT", "WS", "COMMENT" ]

    RULE_prog = 0
    RULE_namedfunc = 1
    RULE_func = 2
    RULE_funcbody = 3
    RULE_body = 4
    RULE_param = 5
    RULE_params = 6
    RULE_externfuncdef = 7
    RULE_externblock = 8
    RULE_externlang = 9
    RULE_ifexpr = 10
    RULE_elseifexpr = 11
    RULE_thenblock = 12
    RULE_elseifblock = 13
    RULE_elseblock = 14
    RULE_statement = 15
    RULE_objectattribute = 16
    RULE_expr = 17
    RULE_args = 18
    RULE_functype = 19
    RULE_returntype = 20
    RULE_constant = 21
    RULE_compilationhint = 22
    RULE_compilationhintfilename = 23
    RULE_compilationhintflags = 24
    RULE_compilationlang = 25
    RULE_linkerhint = 26
    RULE_structcontent = 27
    RULE_structdecl = 28
    RULE_datatype = 29

    ruleNames =  [ "prog", "namedfunc", "func", "funcbody", "body", "param", 
                   "params", "externfuncdef", "externblock", "externlang", 
                   "ifexpr", "elseifexpr", "thenblock", "elseifblock", "elseblock", 
                   "statement", "objectattribute", "expr", "args", "functype", 
                   "returntype", "constant", "compilationhint", "compilationhintfilename", 
                   "compilationhintflags", "compilationlang", "linkerhint", 
                   "structcontent", "structdecl", "datatype" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    STRING_LITERAL=40
    ID=41
    INT=42
    WS=43
    COMMENT=44

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def namedfunc(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HazeParser.NamedfuncContext)
            else:
                return self.getTypedRuleContext(HazeParser.NamedfuncContext,i)


        def externblock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HazeParser.ExternblockContext)
            else:
                return self.getTypedRuleContext(HazeParser.ExternblockContext,i)


        def compilationhint(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HazeParser.CompilationhintContext)
            else:
                return self.getTypedRuleContext(HazeParser.CompilationhintContext,i)


        def linkerhint(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HazeParser.LinkerhintContext)
            else:
                return self.getTypedRuleContext(HazeParser.LinkerhintContext,i)


        def structdecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HazeParser.StructdeclContext)
            else:
                return self.getTypedRuleContext(HazeParser.StructdeclContext,i)


        def getRuleIndex(self):
            return HazeParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = HazeParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 3161095930880) != 0):
                self.state = 65
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [41]:
                    self.state = 60
                    self.namedfunc()
                    pass
                elif token in [10]:
                    self.state = 61
                    self.externblock()
                    pass
                elif token in [37]:
                    self.state = 62
                    self.compilationhint()
                    pass
                elif token in [38]:
                    self.state = 63
                    self.linkerhint()
                    pass
                elif token in [39]:
                    self.state = 64
                    self.structdecl()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NamedfuncContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(HazeParser.ID, 0)

        def params(self):
            return self.getTypedRuleContext(HazeParser.ParamsContext,0)


        def funcbody(self):
            return self.getTypedRuleContext(HazeParser.FuncbodyContext,0)


        def returntype(self):
            return self.getTypedRuleContext(HazeParser.ReturntypeContext,0)


        def getRuleIndex(self):
            return HazeParser.RULE_namedfunc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNamedfunc" ):
                listener.enterNamedfunc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNamedfunc" ):
                listener.exitNamedfunc(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNamedfunc" ):
                return visitor.visitNamedfunc(self)
            else:
                return visitor.visitChildren(self)




    def namedfunc(self):

        localctx = HazeParser.NamedfuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_namedfunc)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(HazeParser.ID)
            self.state = 71
            self.match(HazeParser.T__0)
            self.state = 72
            self.params()
            self.state = 73
            self.match(HazeParser.T__1)
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 74
                self.match(HazeParser.T__2)
                self.state = 75
                self.returntype()


            self.state = 78
            self.funcbody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def params(self):
            return self.getTypedRuleContext(HazeParser.ParamsContext,0)


        def funcbody(self):
            return self.getTypedRuleContext(HazeParser.FuncbodyContext,0)


        def returntype(self):
            return self.getTypedRuleContext(HazeParser.ReturntypeContext,0)


        def getRuleIndex(self):
            return HazeParser.RULE_func

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc" ):
                listener.enterFunc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc" ):
                listener.exitFunc(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc" ):
                return visitor.visitFunc(self)
            else:
                return visitor.visitChildren(self)




    def func(self):

        localctx = HazeParser.FuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_func)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(HazeParser.T__0)
            self.state = 81
            self.params()
            self.state = 82
            self.match(HazeParser.T__1)
            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 83
                self.match(HazeParser.T__2)
                self.state = 84
                self.returntype()


            self.state = 87
            self.funcbody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncbodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def body(self):
            return self.getTypedRuleContext(HazeParser.BodyContext,0)


        def expr(self):
            return self.getTypedRuleContext(HazeParser.ExprContext,0)


        def getRuleIndex(self):
            return HazeParser.RULE_funcbody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncbody" ):
                listener.enterFuncbody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncbody" ):
                listener.exitFuncbody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncbody" ):
                return visitor.visitFuncbody(self)
            else:
                return visitor.visitChildren(self)




    def funcbody(self):

        localctx = HazeParser.FuncbodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_funcbody)
        self._la = 0 # Token type
        try:
            self.state = 98
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 90
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==4:
                    self.state = 89
                    self.match(HazeParser.T__3)


                self.state = 92
                self.match(HazeParser.T__4)
                self.state = 93
                self.body()
                self.state = 94
                self.match(HazeParser.T__5)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 96
                self.match(HazeParser.T__3)
                self.state = 97
                self.expr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HazeParser.StatementContext)
            else:
                return self.getTypedRuleContext(HazeParser.StatementContext,i)


        def getRuleIndex(self):
            return HazeParser.RULE_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBody" ):
                listener.enterBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBody" ):
                listener.exitBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody" ):
                return visitor.visitBody(self)
            else:
                return visitor.visitChildren(self)




    def body(self):

        localctx = HazeParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 7799661092898) != 0):
                self.state = 100
                self.statement()
                self.state = 105
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(HazeParser.ID, 0)

        def datatype(self):
            return self.getTypedRuleContext(HazeParser.DatatypeContext,0)


        def getRuleIndex(self):
            return HazeParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = HazeParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(HazeParser.ID)
            self.state = 107
            self.match(HazeParser.T__2)
            self.state = 108
            self.datatype()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HazeParser.ParamContext)
            else:
                return self.getTypedRuleContext(HazeParser.ParamContext,i)


        def getRuleIndex(self):
            return HazeParser.RULE_params

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParams" ):
                listener.enterParams(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParams" ):
                listener.exitParams(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParams" ):
                return visitor.visitParams(self)
            else:
                return visitor.visitChildren(self)




    def params(self):

        localctx = HazeParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_params)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==41:
                self.state = 110
                self.param()
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==7:
                    self.state = 111
                    self.match(HazeParser.T__6)
                    self.state = 112
                    self.param()
                    self.state = 117
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExternfuncdefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(HazeParser.ID)
            else:
                return self.getToken(HazeParser.ID, i)

        def params(self):
            return self.getTypedRuleContext(HazeParser.ParamsContext,0)


        def returntype(self):
            return self.getTypedRuleContext(HazeParser.ReturntypeContext,0)


        def getRuleIndex(self):
            return HazeParser.RULE_externfuncdef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExternfuncdef" ):
                listener.enterExternfuncdef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExternfuncdef" ):
                listener.exitExternfuncdef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExternfuncdef" ):
                return visitor.visitExternfuncdef(self)
            else:
                return visitor.visitChildren(self)




    def externfuncdef(self):

        localctx = HazeParser.ExternfuncdefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_externfuncdef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 120
                    self.match(HazeParser.ID)
                    self.state = 121
                    self.match(HazeParser.T__7) 
                self.state = 126
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

            self.state = 127
            self.match(HazeParser.ID)
            self.state = 128
            self.match(HazeParser.T__0)
            self.state = 129
            self.params()
            self.state = 130
            self.match(HazeParser.T__1)
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 131
                self.match(HazeParser.T__2)
                self.state = 132
                self.returntype()


            self.state = 135
            self.match(HazeParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExternblockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def externlang(self):
            return self.getTypedRuleContext(HazeParser.ExternlangContext,0)


        def externfuncdef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HazeParser.ExternfuncdefContext)
            else:
                return self.getTypedRuleContext(HazeParser.ExternfuncdefContext,i)


        def getRuleIndex(self):
            return HazeParser.RULE_externblock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExternblock" ):
                listener.enterExternblock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExternblock" ):
                listener.exitExternblock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExternblock" ):
                return visitor.visitExternblock(self)
            else:
                return visitor.visitChildren(self)




    def externblock(self):

        localctx = HazeParser.ExternblockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_externblock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(HazeParser.T__9)
            self.state = 138
            self.externlang()
            self.state = 139
            self.match(HazeParser.T__4)
            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==41:
                self.state = 140
                self.externfuncdef()
                self.state = 145
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 146
            self.match(HazeParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExternlangContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return HazeParser.RULE_externlang

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExternlang" ):
                listener.enterExternlang(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExternlang" ):
                listener.exitExternlang(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExternlang" ):
                return visitor.visitExternlang(self)
            else:
                return visitor.visitChildren(self)




    def externlang(self):

        localctx = HazeParser.ExternlangContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_externlang)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            _la = self._input.LA(1)
            if not(_la==11 or _la==12):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfexprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(HazeParser.ExprContext,0)


        def getRuleIndex(self):
            return HazeParser.RULE_ifexpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfexpr" ):
                listener.enterIfexpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfexpr" ):
                listener.exitIfexpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfexpr" ):
                return visitor.visitIfexpr(self)
            else:
                return visitor.visitChildren(self)




    def ifexpr(self):

        localctx = HazeParser.IfexprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_ifexpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElseifexprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(HazeParser.ExprContext,0)


        def getRuleIndex(self):
            return HazeParser.RULE_elseifexpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElseifexpr" ):
                listener.enterElseifexpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElseifexpr" ):
                listener.exitElseifexpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElseifexpr" ):
                return visitor.visitElseifexpr(self)
            else:
                return visitor.visitChildren(self)




    def elseifexpr(self):

        localctx = HazeParser.ElseifexprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_elseifexpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ThenblockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def body(self):
            return self.getTypedRuleContext(HazeParser.BodyContext,0)


        def getRuleIndex(self):
            return HazeParser.RULE_thenblock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterThenblock" ):
                listener.enterThenblock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitThenblock" ):
                listener.exitThenblock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitThenblock" ):
                return visitor.visitThenblock(self)
            else:
                return visitor.visitChildren(self)




    def thenblock(self):

        localctx = HazeParser.ThenblockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_thenblock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElseifblockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def body(self):
            return self.getTypedRuleContext(HazeParser.BodyContext,0)


        def getRuleIndex(self):
            return HazeParser.RULE_elseifblock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElseifblock" ):
                listener.enterElseifblock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElseifblock" ):
                listener.exitElseifblock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElseifblock" ):
                return visitor.visitElseifblock(self)
            else:
                return visitor.visitChildren(self)




    def elseifblock(self):

        localctx = HazeParser.ElseifblockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_elseifblock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElseblockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def body(self):
            return self.getTypedRuleContext(HazeParser.BodyContext,0)


        def getRuleIndex(self):
            return HazeParser.RULE_elseblock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElseblock" ):
                listener.enterElseblock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElseblock" ):
                listener.exitElseblock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElseblock" ):
                return visitor.visitElseblock(self)
            else:
                return visitor.visitChildren(self)




    def elseblock(self):

        localctx = HazeParser.ElseblockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_elseblock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return HazeParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class IfStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HazeParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ifexpr(self):
            return self.getTypedRuleContext(HazeParser.IfexprContext,0)

        def thenblock(self):
            return self.getTypedRuleContext(HazeParser.ThenblockContext,0)
